made backbone with all classes of sprint 1 and working sheet

--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Controllers\GuidesController.cs" />
     <Compile Include="Controllers\MusicPieceController.cs" />
+    <Compile Include="Controllers\PianoController.cs" />
     <Compile Include="Models\GreatStaffModel.cs" />
     <Compile Include="Models\SheetModel.cs" />
     <Compile Include="Models\StaffModel.cs" />
