--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -64,11 +64,17 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Controllers\GuidesController.cs" />
+    <Compile Include="Controllers\InputController.cs" />
     <Compile Include="Controllers\MusicPieceController.cs" />
     <Compile Include="Controllers\PianoController.cs" />
+    <Compile Include="Models\BlackKey.cs" />
     <Compile Include="Models\GreatStaffModel.cs" />
+    <Compile Include="Models\KeyModel.cs" />
+    <Compile Include="Models\OctaveModel.cs" />
+    <Compile Include="Models\PianoModel.cs" />
     <Compile Include="Models\SheetModel.cs" />
     <Compile Include="Models\StaffModel.cs" />
+    <Compile Include="Models\WhiteKey.cs" />
     <Compile Include="MusicXml\Domain\Backup.cs" />
     <Compile Include="MusicXml\Domain\Clef.cs" />
     <Compile Include="MusicXml\Domain\Encoding.cs" />
