--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -71,14 +71,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DatabaseConnection.cs" />
-    <Compile Include="MusicDatabaseDataSet.Designer.cs" />
     <Compile Include="MusicDatabaseDataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MusicDatabaseDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Views\XMLChoose.xaml.cs">
-      <DependentUpon>XMLChoose.xaml</DependentUpon>
+    <Compile Include="Views\MusicChooseView.xaml.cs">
+      <DependentUpon>MusicChooseView.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -120,7 +119,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\XMLChoose.xaml">
+    <Page Include="Views\MusicChooseView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
