--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -84,7 +84,6 @@
     <Compile Include="Controllers\InputController.cs" />
     <Compile Include="Controllers\MusicPieceController.cs" />
     <Compile Include="Controllers\PianoController.cs" />
-
     <Compile Include="Models\PianoModel\BlackKey.cs" />
     <Compile Include="Models\SheetModel\GreatStaffModel.cs" />
     <Compile Include="Models\PianoModel\KeyModel.cs" />
@@ -93,7 +92,6 @@
     <Compile Include="Models\SheetModel\SheetModel.cs" />
     <Compile Include="Models\SheetModel\StaffModel.cs" />
     <Compile Include="Models\PianoModel\WhiteKey.cs" />
-
     <Compile Include="MusicXml\Domain\Backup.cs" />
     <Compile Include="MusicXml\Domain\Clef.cs" />
     <Compile Include="MusicXml\Domain\Encoding.cs" />
@@ -117,6 +115,7 @@
     <Compile Include="Views\MusicChooseView.xaml.cs">
       <DependentUpon>MusicChooseView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\StaveView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
