Add reference to pianoapp

--- a/PianoApp/PianoAppTest/PianoAppTest.csproj
+++ b/PianoApp/PianoAppTest/PianoAppTest.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PianoApp\PianoApp.csproj">
+      <Project>{1b61d4f2-b467-45b3-86e4-c648e0607ea8}</Project>
+      <Name>PianoApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
