--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Views\MusicChooseView.xaml.cs">
       <DependentUpon>MusicChooseView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\NoteView.cs" />
     <Compile Include="Views\StaveView.cs" />
   </ItemGroup>
   <ItemGroup>
