--- a/PianoApp/PianoAppTests/PianoAppTests.csproj
+++ b/PianoApp/PianoAppTests/PianoAppTests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseConnectionTests.cs" />
     <Compile Include="MainWindowTest.cs" />
     <Compile Include="MetronomeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
