--- a/PianoApp/PianoAppTests/PianoAppTests.csproj
+++ b/PianoApp/PianoAppTests/PianoAppTests.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseConnectionTests.cs" />
-    <Compile Include="MainWindowTest.cs" />
+    <Compile Include="ButtonViewTest.cs" />
     <Compile Include="MetronomeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
