Record keypresses, convert duration to note type base don bpm

--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Controllers\MidiController.cs" />
     <Compile Include="Controllers\MidiControllerEventArgs.cs" />
     <Compile Include="Controllers\PianoToneController.cs" />
+    <Compile Include="Controllers\RecordController.cs" />
     <Compile Include="Controllers\SheetController.cs" />
     <Compile Include="Controllers\GuidesController.cs" />
     <Compile Include="DatabaseConnection.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="MidiOutput.cs" />
     <Compile Include="Models\Exception\BpmOutOfRangeException.cs" />
     <Compile Include="metronomeSound.cs" />
+    <Compile Include="Models\RecordedNote.cs" />
     <Compile Include="MusicDatabaseDataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
