--- a/PianoApp/PianoApp/App.config
+++ b/PianoApp/PianoApp/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="PianoApp.Properties.Settings.MusicDatabaseConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bin\Debug\MusicDatabase.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MusicDatabase.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
