--- a/PianoApp/PianoApp/PianoApp.csproj
+++ b/PianoApp/PianoApp/PianoApp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1B61D4F2-B467-45B3-86E4-C648E0607EA8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>PianoApp</RootNamespace>
-    <AssemblyName>PianoApp</AssemblyName>
+    <AssemblyName>Keyboard Hero</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
